--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.has-app-max-width {
+  max-width: 1366px;
+  margin: auto;
+  width: 100%;
+}
